--- a/README.Rmd
+++ b/README.Rmd
@@ -19,37 +19,6 @@ knitr::opts_chunk$set(
 [![Lifecycle: experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://www.tidyverse.org/lifecycle/#experimental)
 <!-- badges: end -->
 
-The goal of GolemShinyTemplate is to ...
+The goal of GolemShinyTemplate is to learn how to use Golem for creating a production ready Shiny app. Most of the code in this package is copied from https://github.com/ColinFay/tidytuesday201942, but was built from the ground up in order to explore which components could be removed and wherever possible remove complexity.
 
-## Installation
-
-You can install the released version of GolemShinyTemplate from [CRAN](https://CRAN.R-project.org) with:
-
-``` r
-install.packages("GolemShinyTemplate")
-```
-
-## Example
-
-This is a basic example which shows you how to solve a common problem:
-
-```{r example}
-library(GolemShinyTemplate)
-## basic example code
-```
-
-What is special about using `README.Rmd` instead of just `README.md`? You can include R chunks like so:
-
-```{r cars}
-summary(cars)
-```
-
-You'll still need to render `README.Rmd` regularly, to keep `README.md` up-to-date.
-
-You can also embed plots, for example:
-
-```{r pressure, echo = FALSE}
-plot(pressure)
-```
-
-In that case, don't forget to commit and push the resulting figure files, so they display on GitHub!
+The final product can be found at: https://tyronehunt.shinyapps.io/GolemShinyTemplate/
